# BitcoinZero

./: .gitignore  .travis.yml  BZNODE.md  CMakeLists.txt  Makefile.am  README.md  autogen.sh  configure.ac  genbuild.sh  pre-deploy.sh
cmake/: utilities.cmake
cmake/module/: GenerateSetupNsi.cmake  Maintenance.cmake  WindowsSystemConfiguration.cmake
contrib/macdeploy/: gen-sdk
depends/: .gitignore  Makefile  README.md  description.md  funcs.mk
depends/hosts/: mingw32.mk
doc/: README_windows.txt
share/: setup.nsi.in
share/qt/: Info.plist.in
src/: CMakeLists.txt  Makefile.am  Makefile.exodus.include  Makefile.qt.include  activebznode.cpp  activebznode.h  activemasternode.cpp  addresstype.h  amount.cpp  amount.h  batchedlogger.h  batchproof_container.cpp  batchproof_container.h  bitcoin-cli-res.rc  bitcoin-cli.cpp  bitcoin-tx-res.rc  bitcoin-tx.cpp  bitcoind-res.rc  bitcoind.cpp  blacklists.h  blockencodings.cpp  bloom.cpp  bznode-payments.cpp  bznode-payments.h.autosave  bznode-sync.cpp  bznode-sync.h  bznode.cpp  bznode.h  bznodeconfig.cpp  bznodeconfig.h  bznodeman.cpp  bznodeman.h  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  checkpoints.cpp  checkpoints.h  clientversion.cpp  clientversion.h  (+65 more)
src/bip47/: account.h  bip47utils.h  paymentchannel.h  paymentcode.h  secretpoint.h
src/bitcoin_bignum/: serialize.h
src/bls/: bls.h  bls_batchverifier.h  bls_ies.h  bls_worker.h
src/bls-signatures/: CMakeLists.txt
src/compat/: byteswap.h
src/consensus/: consensus.h  params.h  (+2 more)
src/crypto/: CMakeLists.txt
src/crypto/Lyra2Z/: Lyra2Z.c
(+397 files in other folders)
